--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "vue": "^2.3.3",
     "vue-resource": "^1.3.4",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
